--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,17 @@ body, html {
 	height: 600px;
 	margin: 0px auto;
 	margin-top: 100px;
+	overflow: hidden;
+	position: relative;
 }
 
 canvas#map {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	
 	width: 1100px;
 	height: 600px;
+	
+	z-index: 1;
 }
