--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ leave reset css as is and add overriding styles below */
 
 body, html {
 	background: #000;
+	font-family: 'Creepster';
 }
 
 h1 { 
