--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+/********************************************************************************
+//    Funky Zombie Killer                                                      //
+//    Copyright (C) 2015  Zack Reithmeyer                                      //
+//                                                                             //
+//    This program is free software: you can redistribute it and/or modify     //
+//    it under the terms of the GNU General Public License as published by     //
+//    the Free Software Foundation, either version 3 of the License, or        //
+//    (at your option) any later version.                                      //
+//                                                                             //
+//    This program is distributed in the hope that it will be useful,          //
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of           //
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            //
+//    GNU General Public License for more details.                             //
+//                                                                             //
+//    You should have received a copy of the GNU General Public License        //
+//    along with this program.  If not, see <http://www.gnu.org/licenses/>.    //
+********************************************************************************/
+
+
 /* reset */
 *, html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, label, fieldset, input, p, blockquote, th, td { margin:0; padding:0 }
 table { border-collapse:collapse; border-spacing:0 }
@@ -14,21 +33,23 @@ a img { border:none; outline: none; }
 leave reset css as is and add overriding styles below */
 
 body, html {
-	background: #000;
+	background: #040404;
 	font-family: 'Creepster';
+	width: 100%;
+	height: 100%;
 }
 
 h1 { 
 	font-size:200%;
 	font-weight:bold;
-	color: #FF0000;
+	color: #880000;
 	text-align: center
 }
 
 h2, h3, h4, h5, h6 {
 	font-size:100%;
 	font-weight:normal;
-	color: #FF0000;
+	color: #880000;
 	text-align: center
 }
 
@@ -51,3 +72,25 @@ canvas#map {
 	
 	z-index: 1;
 }
+
+#footer {
+	border-top: 5px solid #444444;
+	border-bottom:5px solid #444444; 
+	text-align: center;
+	color: #000000;
+	font-style:italic;
+	background-color: #444444;
+	position:absolute; 
+	bottom:0;
+	height: 30px;
+	width:100%;
+	/* min-height: 30em; */
+	}
+#footer a:link, a:visited, a:active {
+	color: #440000;
+	text-decoration:underline;
+	}
+#footer a:hover {
+	color: #880000;
+	text-decoration:underline;
+	}
